crates/core-executor/src/tests/snapshots/query_func_date_add.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT date_add(day, 30, '2025-01-06')\""
---
Ok(
    [
        "+---------------------------------------------------+",
        "| dateadd(Utf8(\"day\"),Int64(30),Utf8(\"2025-01-06\")) |",
        "+---------------------------------------------------+",
        "| 2025-02-05T00:00:00                               |",
        "+---------------------------------------------------+",
    ],
)
