crates/core-executor/src/tests/snapshots/query_merge_into_dbt_pattern_with_timestamp_filter_first.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT\n        COUNT(*) as total_rows,\n        COUNT(CASE WHEN start_tstamp >= '2024-06-01' AND start_tstamp < '2024-07-01' THEN 1 END) as in_range,\n        COUNT(CASE WHEN start_tstamp < '2024-06-01' THEN 1 END) as before_range,\n        COUNT(CASE WHEN session_id = 'jan_session_1' THEN 1 END) as jan_1_count,\n        COUNT(CASE WHEN session_id = 'jan_session_2' THEN 1 END) as jan_2_count,\n        COUNT(CASE WHEN session_id = 'june_session_updated' THEN 1 END) as june_updated_count\n    FROM embucket.public.sessions_target\""
info: "Setup queries: CREATE TABLE embucket.public.sessions_target (session_id VARCHAR, start_tstamp TIMESTAMP, page_views INTEGER); CREATE TABLE embucket.public.sessions_source (session_id VARCHAR, start_tstamp TIMESTAMP, page_views INTEGER); INSERT INTO embucket.public.sessions_target VALUES ('jan_session_1', '2024-01-15 10:00:00', 5), ('jan_session_2', '2024-01-20 14:30:00', 3), ('june_session_1', '2024-06-15 09:00:00', 10), ('june_session_2', '2024-06-20 16:45:00', 7); INSERT INTO embucket.public.sessions_source VALUES ('june_session_updated', '2024-06-15 09:00:00', 15), ('june_session_new', '2024-06-25 11:30:00', 12); MERGE INTO sessions_target t USING sessions_source s ON (t.start_tstamp BETWEEN CAST('2024-06-01' AS TIMESTAMP) AND CAST('2024-06-30' AS TIMESTAMP)) AND (s.session_id = t.session_id) WHEN MATCHED THEN UPDATE SET t.page_views = s.page_views, t.session_id = s.session_id WHEN NOT MATCHED THEN INSERT (session_id, start_tstamp, page_views) VALUES (s.session_id, s.start_tstamp, s.page_views)"
---
Ok(
    [
        "+------------+----------+--------------+-------------+-------------+--------------------+",
        "| total_rows | in_range | before_range | jan_1_count | jan_2_count | june_updated_count |",
        "+------------+----------+--------------+-------------+-------------+--------------------+",
        "| 6          | 4        | 2            | 1           | 1           | 1                  |",
        "+------------+----------+--------------+-------------+-------------+--------------------+",
    ],
)
